# spinny

./: .gitignore  CMakeLists.txt  README.md  configure.sh  flake.nix  jsconfig.json  somefile.txt
res/shaders/: hello_triangle.frag  hello_triangle.vert
src/: constants.hpp  game.cpp  game.hpp  graphics.cpp  graphics.hpp  hello_triangle_minimal.cpp  hello_triangle_minimal.html  main.cpp  spinny.cpp  spinny.html  window.cpp  window.hpp  woof.html  woof.js
